--- a/translatorlab.ipynb
+++ b/translatorlab.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/r1cc4rd0m4zz4/TraNsLatorLaB/blob/master/translatorlab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/r1cc4rd0m4zz4/traNsLatorLaB/blob/master/translatorlab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -23,48 +23,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bB7MHqPktORj",
-        "outputId": "53ba968b-b468-417f-b113-806fa1bc8fb6"
+        "id": "bB7MHqPktORj"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting fasttext\n",
-            "  Downloading fasttext-0.9.2.tar.gz (68 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/68.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.8/68.8 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting pybind11>=2.2 (from fasttext)\n",
-            "  Using cached pybind11-2.11.1-py3-none-any.whl (227 kB)\n",
-            "Requirement already satisfied: setuptools>=0.7.0 in /usr/local/lib/python3.10/dist-packages (from fasttext) (67.7.2)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from fasttext) (1.23.5)\n",
-            "Building wheels for collected packages: fasttext\n",
-            "  Building wheel for fasttext (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for fasttext: filename=fasttext-0.9.2-cp310-cp310-linux_x86_64.whl size=4199770 sha256=00cb0130852ea5af846dc2550505482e50bb8454504e88981927fb2ef7355c8a\n",
-            "  Stored in directory: /root/.cache/pip/wheels/a5/13/75/f811c84a8ab36eedbaef977a6a58a98990e8e0f1967f98f394\n",
-            "Successfully built fasttext\n",
-            "Installing collected packages: pybind11, fasttext\n",
-            "Successfully installed fasttext-0.9.2 pybind11-2.11.1\n",
-            "--2023-09-30 20:11:07--  https://dl.fbaipublicfiles.com/nllb/lid/lid218e.bin\n",
-            "Resolving dl.fbaipublicfiles.com (dl.fbaipublicfiles.com)... 13.33.88.16, 13.33.88.98, 13.33.88.28, ...\n",
-            "Connecting to dl.fbaipublicfiles.com (dl.fbaipublicfiles.com)|13.33.88.16|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1176355829 (1.1G) [application/octet-stream]\n",
-            "Saving to: ‘lid218e.bin’\n",
-            "\n",
-            "lid218e.bin         100%[===================>]   1.09G  24.2MB/s    in 49s     \n",
-            "\n",
-            "2023-09-30 20:11:57 (22.8 MB/s) - ‘lid218e.bin’ saved [1176355829/1176355829]\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "%pip install fasttext\n",
+        "!pip install fasttext\n",
         "\n",
         "!wget https://dl.fbaipublicfiles.com/nllb/lid/lid218e.bin\n",
         "# !wget https://dl.fbaipublicfiles.com/fasttext/supervised-models/lid.176.bin"
@@ -83,21 +46,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vK_YrRahtORl",
-        "outputId": "66627d8d-7413-48a0-cf5b-ba3963679609"
+        "id": "vK_YrRahtORl"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Inserisci il testo da riconoscere: In una galassia lontana londata ...\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "testo = input(\"Inserisci il testo da riconoscere: \")"
       ]
@@ -106,34 +57,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mzHYXN2_tORl",
-        "outputId": "6b8a95bf-17e4-4665-ed51-f90ff6dbcf15"
+        "id": "mzHYXN2_tORl"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ita_Latn\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import fasttext\n",
         "\n",
         "plm = \"/content/lid218e.bin\"\n",
         "model = fasttext.load_model(plm)\n",
-        "p = model.predict(testo, k=1)\n",
+        "p = model.predict(testo, k=-1, threshold=0.5)\n",
         "input_lang = p[0][0].replace('__label__', '')\n",
         "print(input_lang)"
       ]
@@ -146,6 +78,53 @@
       "source": [
         "Dopodiché, prendiamo il testo inserito e l'etichetta prevista e li diamo in pasto a NLLB, che traduce il testo dalla lingua originale alla lingua supportata da NLLB"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install transformers"
+      ],
+      "metadata": {
+        "id": "7yVRe2tq5tvn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_name = 'facebook/nllb-200-distilled-600M'\n",
+        "# model_name = 'facebook/nllb-200-1.3B'\n",
+        "# model_name = 'facebook/nllb-200-3.3B'\n",
+        "# model_name = 'facebook/nllb-200-distilled-1.3B'\n",
+        "\n",
+        "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, pipeline\n",
+        "import torch\n",
+        "\n",
+        "if not torch.cuda.is_available():\n",
+        "  print('WARNING: You may want to change the runtime to GPU for faster training!')\n",
+        "  device = 'cpu'\n",
+        "else:\n",
+        "  device = 'cuda:0'\n",
+        "\n",
+        "model = AutoModelForSeq2SeqLM.from_pretrained(model_name).to(device)\n",
+        "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+        "output_lang = 'eng_Latn'\n",
+        "translation_pipeline = pipeline('translation',\n",
+        "                                model=model,\n",
+        "                                tokenizer=tokenizer,\n",
+        "                                src_lang=input_lang,\n",
+        "                                tgt_lang=output_lang,\n",
+        "                                max_length = 400,\n",
+        "                                device=device)\n",
+        "output = translation_pipeline(testo)\n",
+        "print(output[0]['translation_text'])"
+      ],
+      "metadata": {
+        "id": "oQaLGdQn6BZo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
