Creato con Colaboratory

--- a/translatorlab.ipynb
+++ b/translatorlab.ipynb
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "testo = input(\"Inserisci il testo da riconoscere: \")"
+        "testo = input(\"Inserisci il testo da riconoscere e tradurre in inglese: \")"
       ]
     },
     {
@@ -66,7 +66,7 @@
         "id": "zDodNGYOtORm"
       },
       "source": [
-        "Dopodiché, prendiamo il testo inserito e l'etichetta prevista e li diamo in pasto a NLLB, che traduce il testo dalla lingua originale alla lingua supportata da NLLB"
+        "Dopodiché, prendiamo il testo inserito e lo passiamo a NLLB, che traduce il testo dalla lingua originale alla lingua desiderata"
       ]
     },
     {
