Creato con Colaboratory

--- a/helsinki_translator_ipynb.ipynb
+++ b/helsinki_translator_ipynb.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOjllBPdDUZ236DF1IWfyL3"
+      "authorship_tag": "ABX9TyObcygG75pcKoaCIZ9a88Gf"
     },
     "kernelspec": {
       "name": "python3",
@@ -35,7 +35,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install transformers, fasttext\n",
+        "!pip install transformers fasttext\n",
         "!wget https://dl.fbaipublicfiles.com/nllb/lid/lid218e.bin"
       ]
     },
