Creato con Colaboratory

--- a/helsinki_translator.ipynb
+++ b/helsinki_translator.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPWaw67mfD+DxFOafdcj8jh",
+      "authorship_tag": "ABX9TyOnwvm7e0dTeRKUJUQcyjpX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Cominciamo a rilevare le lingue usate per la traduzione"
+        "Cominciamo a rilevare le lingue usate per la traduzione per il nome del modello da usare"
       ],
       "metadata": {
         "id": "uMzAVa__NTyd"
@@ -116,10 +116,40 @@
         "\n",
         "p = model.predict(testo_dst, k=-1, threshold=0.5)\n",
         "output_lang = p[0][0].replace('__label__', '')\n",
-        "print(\"Lingua destinaizone: \" + output_lang)"
+        "print(\"Lingua destinaizone: \" + output_lang)\n",
+        "\n",
+        "src = input_lang[:2]\n",
+        "trg = output_lang[:2]\n",
+        "model_name = f'Helsinki-NLP/opus-mt-{src}-{trg}'"
       ],
       "metadata": {
         "id": "wcJGYpQFNg3O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Individua la presenza di una GPU"
+      ],
+      "metadata": {
+        "id": "xzyEf6sHo6ZS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "\n",
+        "if not torch.cuda.is_available():\n",
+        "  print('WARNING: You may want to change the runtime to GPU for faster training!')\n",
+        "  device = 'cpu'\n",
+        "else:\n",
+        "  device = 'cuda:0'"
+      ],
+      "metadata": {
+        "id": "vXTFLxRoo9Ao"
       },
       "execution_count": null,
       "outputs": []
@@ -134,24 +164,53 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Esempio n°1"
+      ],
+      "metadata": {
+        "id": "AQ2me_UTpMhg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from transformers import MarianTokenizer, MarianMTModel\n",
         "from typing import List\n",
-        "src = input_lang[:2]\n",
-        "trg = output_lang[:2]\n",
-        "#model_name = f'Helsinki-NLP/opus-mt-{src}-{trg}'\n",
-        "model_name = f'Helsinki-NLP/opus-mt-tc-big-{src}-{trg}'\n",
+        "\n",
         "tokenizer = MarianTokenizer.from_pretrained(model_name)\n",
-        "model = MarianMTModel.from_pretrained(model_name)\n",
-        "batch = tokenizer.prepare_translation_batch(src_texts=[input_lang], return_tensors=\"pt\", padding=True)\n",
+        "model = MarianMTModel.from_pretrained(model_name).to(device)\n",
+        "batch = tokenizer([testo_src], return_tensors=\"pt\", padding=True).to(device)\n",
         "translated = model.generate(**batch)\n",
         "\n",
         "for t in translated:\n",
-        "    print( tokenizer.decode(t, skip_special_tokens=True))"
+        "    print(tokenizer.decode(t, skip_special_tokens=True))"
       ],
       "metadata": {
         "id": "mWC8kvfSToXC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Esempio n°2"
+      ],
+      "metadata": {
+        "id": "uh8dk8WPpPfa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import pipeline\n",
+        "\n",
+        "pipe = pipeline(\"translation\", model=\"Helsinki-NLP/opus-mt-it-en\",device=device)\n",
+        "print(pipe(testo_src))"
+      ],
+      "metadata": {
+        "id": "gL5BY4yumyR3"
       },
       "execution_count": null,
       "outputs": []
