--- a/helsinki_translator.ipynb
+++ b/helsinki_translator.ipynb
@@ -6,8 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOnwvm7e0dTeRKUJUQcyjpX",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPzs+YxcOtH5XLieZGX2MJU"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,16 +18,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/r1cc4rd0m4zz4/traNsLatorLaB/blob/master/helsinki_translator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -206,7 +195,7 @@
       "source": [
         "from transformers import pipeline\n",
         "\n",
-        "pipe = pipeline(\"translation\", model=\"Helsinki-NLP/opus-mt-it-en\",device=device)\n",
+        "pipe = pipeline(\"translation\", model=model_name,device=device)\n",
         "print(pipe(testo_src))"
       ],
       "metadata": {
